# trashcal

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  devenv.nix  devenv.yaml  flake.nix  manifest  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  smoke.test.ts
.aws/: config  credential-process.json  credential-process.sh
.github/workflows/: deploy.yml  gc.yml  rust.yml
cdk/: cdk.json  jest.config.ts  package-lock.json  package.json  smoke.test.ts
cdk/lib/: trashcal-cdk-stack.ts  trashcal-cert-stack.ts
lambda/: Cargo.toml  README.md
lambda/src/: error.rs  lib.rs  main.rs  pickup.rs  pickup_calendar.rs  trashcal.rs
lambda/tests/: calendar_tests.rs  integration_tests.rs
lambda/tests/data/: no_id.json  orange_oppweeks.json  orange_sameweeks.json  path_based.json  path_based_with_extension.json  path_based_with_json.json  query_based.json
lib/: trashcal-cdk-stack.ts
trashcal-lambda/: Cargo.toml
trashcal-lambda/src/: diagnostic_wrapper.rs  lib.rs  main.rs  pickup.rs  pickup_calendar.rs
trashcal-lambda/tests/data/: bad_id.json  blue_oppweeks.json  blue_sameweeks.json  orange_recycleonly.json
