[package]
name = "trashcal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
http = "0.2"
icalendar = { version = "0.15", features = ["parser", "serde"] }
itertools = "0.11"
lambda_http = { version = "0.8", default-features = false, features = [
    "apigw_rest",
    "apigw_http",
] }
lambda_runtime = "0.8"
mediatype = "0.19"
regex = "1.6"
# disabling native openssl in favor of rustls because cross compiling openssl with cargo lambda sucks
reqwest = { version = "0.11", default-features = false, features = [
    "gzip",
    "rustls-tls",
] }
scraper = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
