[package]
name = "trashcal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
chrono-tz = { version = "0.10.3", features = ["filter-by-regex"] }
http = "1.1.0"
icalendar = { version = "0.16.13", features = ["parser", "serde"] }
itertools = "0.14"
lambda_http = { version = "0.15", default-features = false, features = [
    "apigw_rest",
    "apigw_http",
] }
lambda_runtime = { version = "0.14.2", features = ["anyhow", "tracing"] }
# disabling native openssl in favor of rustls because cross compiling openssl with cargo lambda sucks
reqwest = { version = "0.13", default-features = false, features = [
    "gzip",
    "rustls-tls",
] }
scraper = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
thiserror = "2.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
